fix: Fixed prompt symbol doesn't break on new line
Re-added CTRL+C to screen instead of shell

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body {
 /* Inserts prompt symbol/text before terminal input */
 .input:before {
   content: attr(data-prompt-symbol);
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .input .char.blink {
